# client

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  REGISTER  Vagrantfile  Vagrantfile.windows  pyproject.toml  setup.py
.github/workflows/: build.yml
boundery/: __main__.py  app.py  enroll.py  settings.py  ui.py
boundery/osal/: __init__.py  osal_elevate.py  osal_linux.py  osal_macos.py  osal_windows.py  osal_windows_elevate.py  win32wifi.py
boundery/static/: PLACEHOLDER
boundery/templates/: base.tpl  ssids.tpl  step1.tpl  step1_api1.tpl  step1_post.tpl  step2.tpl  step3.tpl  step4.tpl
container-build/: build.cfg
container-build/linux/: install.sh  packages
docker/: Dockerfile.android  Dockerfile.linux
